Fixed height of search bar input box on IE.

--- a/styles/_search-bar-controls.sass
+++ b/styles/_search-bar-controls.sass
@@ -18,6 +18,7 @@
         box-sizing: border-box
         display: inline-block
         font-size: 16px
+        height: 50px
         line-height: 50px
         margin: 0
         outline: none
